--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -7,7 +7,7 @@
 version: 2
 updates:  
   - package-ecosystem: devcontainers
-    directory: /
+    directory: "/"
     schedule:
       interval: "daily"
     ignore:
