--- a/.devcontainer/node.js/devcontainer.json
+++ b/.devcontainer/node.js/devcontainer.json
@@ -1,4 +1,23 @@
+// For format details, see https://aka.ms/devcontainer.json. For config options, see the
+// README at: https://github.com/devcontainers/templates/tree/main/src/typescript-node
 {
-      "image": "mcr.microsoft.com/devcontainers/typescript-node:18",
-      "features": {"ghcr.io/codspace/versioning/foo:1.1.0": {}}
+	"name": "Node.js & TypeScript",
+	// Or use a Dockerfile or Docker Compose file. More info: https://containers.dev/guide/dockerfile
+	// When SPFx support is expanded in code, update the following
+	"image": "mcr.microsoft.com/devcontainers/typescript-node:1-18-bookworm"
+
+	// Features to add to the dev container. More info: https://containers.dev/features.
+	// "features": {},
+
+	// Use 'forwardPorts' to make a list of ports inside the container available locally.
+	// "forwardPorts": [],
+
+	// Use 'postCreateCommand' to run commands after the container is created.
+	// "postCreateCommand": "yarn install",
+
+	// Configure tool-specific properties.
+	// "customizations": {},
+
+	// Uncomment to connect as root instead. More info: https://aka.ms/dev-containers-non-root.
+	// "remoteUser": "root"
 }
